--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"license": ["GPL-2.0+"],
 	"require": {
-		"typo3/cms-core": "^7.6"
+		"typo3/cms-core": "^7.6 || ^8.7"
 	},
 	"replace": {
 		"l10n_translator": "self.version",
