--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "lw/l10n-translator",
 	"type": "typo3-cms-extension",
-	"description": "Translate l10n files (label fiels) in a TYPO3 backend module. Maintain l10n folder with CLI tasks.",
+	"description": "Translate l10n files (label files) in a TYPO3 backend module. Maintain l10n folder with CLI tasks.",
 	"authors": [
 		{
 			"name": "Achim Fritz",
@@ -14,7 +14,7 @@
 	],
 	"license": ["GPL-2.0-or-later"],
 	"require": {
-		"typo3/cms-core": "^8.7 || ^9.5"
+		"typo3/cms-core": "^9.5"
 	},
 	"replace": {
 		"l10n_translator": "self.version",
