--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	],
 	"license": ["GPL-2.0-or-later"],
 	"require": {
-		"typo3/cms-core": "^9.5"
+		"typo3/cms-core": "^9.5",
+		"ext-xml": "*"
 	},
 	"replace": {
 		"l10n_translator": "self.version",
