--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"typo3/cms-core": "^9.5"
 	},
 	"replace": {
-		"l10n_translator": "self.version",
+		"lw/l10n_translator": "self.version",
 		"typo3-ter/l10n-translator": "self.version"
 	},
 	"autoload": {
