--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"license": ["GPL-2.0-or-later"],
 	"require": {
-		"typo3/cms-core": "^9.5"
+		"typo3/cms-core": "^9.5 || ^10.4"
 	},
 	"replace": {
 		"lw/l10n_translator": "self.version",
